Added Category Registration Page

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  background-color: black;
 }
 
 a {
@@ -28,4 +29,60 @@ a {
   min-height: calc(100vh - var(--bodyPaddingTop));
   display: flex;
   flex-direction: column;
+}
+
+main {
+  max-width: 900px;
+  width: 100%;
+  margin: auto;
+}
+
+input, textarea {
+  box-sizing: border-box;
+  color: rgb(245, 245, 245);
+  display: block;
+  width: 100%;
+  font-size: 18px;
+  border-right-style: initial;
+  border-left-style: initial;
+  border-right-color: initial;
+  border-left-color: initial;
+  margin-bottom: 45px;
+  resize: none;
+  background: rgb(83, 88, 93);
+  outline: 0px;
+  border-width: 4px 0px;
+  border-image: initial;
+  border-top: 4px solid transparent;
+  border-bottom: 4px solid rgb(83, 88, 93);
+  padding: 16px;
+  border-radius: 4px;
+  transition: border-color 0.3s ease 0s;
+}
+
+input {
+  height: 57px;
+}
+
+textarea {
+  height: 100px;
+}
+
+input:focus, textarea:focus {
+  --primary: #2a7ae4;
+  transition: border-color 0.3s ease 0s;
+  border-bottom-color: var(--primary);
+}
+
+@media (max-width: 800px) {
+  a.ButtonLink {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--primary);
+    border-radius: 0;
+    border: 0;
+    text-align: center;
+  }
 }
